<resources>
    <string name="app_name">设备模拟器</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="server_header">服务器</string>
    <string name="data_header">数据</string>

    <!-- Messages Preferences -->
    <string name="server_host_name">主机名或ip地址</string>
    <string name="server_port">端口</string>
    <string name="device_token">设备token/key</string>
    <string name="auth_data_title">登录数据模板</string>
    <string name="auth_data_template"><![CDATA[{"method": "update","gatewayNo": "02","userkey": "6f289b7f11084520bd2aad8e425ee9b4"}&^!]]></string>
    <string name="tele_data_title">设备数据模板</string>
    <string name="tele_data_template"><![CDATA[{"method": "upload","data":[{"Name":"T1","Value":"33"},{"Name":"T2","Value":"96.2"}]}&^!]]></string>
    <string name="sp_key_server_host_name">sp_key_server_host_name</string>
    <string name="sp_key_server_port">sp_key_server_port</string>
    <string name="sp_key_device_token">sp_key_device_token</string>
    <string name="sp_key_auth_data">sp_key_auth_data</string>
    <string name="sp_key_tele_data">sp_key_tele_data</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="msg_server_info_invalid">服务器信息无效，请在设置页面配置好正确可用的服务器信息。</string>
</resources>
