<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/server_header">

        <EditTextPreference
            app:key="server_host_name"
            app:title="@string/server_host_name"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:inputType="number"
            android:digits="0123456789"
            app:key="server-port"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true"/>


<!--        <ListPreference-->
<!--            app:defaultValue="server_port"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="server_port"-->
<!--            app:title="@string/server_port"-->
<!--            app:useSimpleSummaryProvider="true" />-->

        <EditTextPreference
            app:key="token"
            app:title="@string/device_token"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>
